--- a/www/src/main.html
+++ b/www/src/main.html
@@ -18,8 +18,8 @@
                 <div class="modal-message">
                     <p>Sembra che tu sia offline.</p>
                     <p>Controlla la tua connessione.</p>
-                    <a href="javascript:;" onclick="jQuery('#connection').hide()" class="bottone">Ricarica</a>
-                    <a href="javascript:;" onclick="appFramework.exitApp();" class="bottone">Chiudi</a>
+                    <a href="javascript:;" onclick="jQuery('#connection').hide()" class="button">Ricarica</a>
+                    <a href="javascript:;" onclick="appFramework.exitApp();" class="button-red">Chiudi</a>
                 </div>
             </div>
         </div>
