--- a/www/src/main.html
+++ b/www/src/main.html
@@ -30,7 +30,7 @@
         </div> 
 
         <!--latest code -->
-        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="../cordova.js"></script>
         <script type="text/javascript" src="js/cordovaApp.js"></script>
         <script>
                         app.initialize();
