--- a/www/src/main.html
+++ b/www/src/main.html
@@ -3,9 +3,11 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>App Framework</title>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, user-scalable=no">
+        <link rel="stylesheet" href="../modules/bootstrap/css/bootstrap.min.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all">	
         <!-- modules -->
         <script src="../modules/jquery/jquery.min.js" type="text/javascript"></script>
+        <script src="../modules/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="../modules/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
         <script src="../modules/respondjs/respond.min.js"></script>	
         <!-- framework js -->
@@ -16,17 +18,15 @@
         <div id="connection" style="display: none;">
             <div class="modal-container">
                 <div class="modal-message">
-                    <p>Sembra che tu sia offline.</p>
-                    <p>Controlla la tua connessione.</p>
-                    <a href="javascript:;" onclick="jQuery('#connection').hide()" class="button">Ricarica</a>
-                    <a href="javascript:;" onclick="appFramework.exitApp();" class="button-red">Chiudi</a>
+                    <span class="warning"><!-- lang --></span>
+                    <a href="javascript:;" onclick="jQuery('#connection').hide();
+                            location.reload()" class="button-reload btn btn-default"><!-- lang --><</a>
+                    <a href="javascript:;" onclick="appFramework.exitApp();" class="button-exit btn btn-default"><!-- lang --></a>
                 </div>
             </div>
         </div>
 
         <div id="wrapper" style="display: block;">
-            <div class="container">
-            </div>
         </div> 
 
         <!--latest code -->
